# kmahjongg

./: .clang-format  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  Background.cpp  Background.h  BoardLayout.cpp  BoardLayout.h  CMakeLists.txt  ChangeLog  DemoAnimation.cpp  DemoAnimation.h  Editor.cpp  Editor.h  FrameImage.cpp  FrameImage.h  GameData.cpp  GameData.h  GameItem.cpp  GameItem.h  GameNum.cpp  GameNum.h  GameScene.cpp  GameScene.h  GameTimer.cpp  GameTimer.h  GameView.cpp  GameView.h  GameWidget.cpp  GameWidget.h  HighScore.cpp  HighScore.h  KmTypes.h  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  MoveListAnimation.cpp  MoveListAnimation.h  (+46 more)
cmake-modules/: FindLibKMahjongg.cmake
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
icon/: kmahjongg.xpm
icons/: CMakeLists.txt  sc-apps-kmahjongg.svgz
layouts/: 4_winds.desktop  4_winds.layout  CMakeLists.txt  Vi.desktop  Vi.layout  X_shaped.desktop  X_shaped.layout  alien.desktop  alien.layout  altar.desktop  altar.layout  arena.desktop  arena.layout  arrow.desktop  arrow.layout  atlantis.desktop  atlantis.layout  aztec.desktop  aztec.layout  balance.desktop  balance.layout  bat.desktop  bat.layout  bug.desktop  bug.layout  castle.desktop  castle.layout  castle2.desktop  castle2.layout  cat.desktop  cat.layout  chains.desktop  chains.layout  checkered.desktop  checkered.layout  chip.desktop  chip.layout  clubs.desktop  clubs.layout  columns.desktop  (+99 more)
pics/: CMakeLists.txt  Makefile.am  classic.tileset  cross.layout  default.bgnd  default.layout  default.theme  default.tileset  default_tileset.svgz  haze.bgnd  newnum.xpm  pause.xpm  pirates.bgnd  pirates.layout  pirates.theme  pirates.tileset  play.xpm  pyramid.layout  runes.tileset  slate.bgnd  stax.layout  test.layout  test2.layout  tower.layout  traditional.tileset  triangle.layout  wood.bgnd
po/af/: kmahjongg.po
po/ar/: kmahjongg.po
po/ast/: kmahjongg.po
po/be/: kmahjongg.po
po/bg/: kmahjongg.po
po/bn/: kmahjongg.po
po/br/: kmahjongg.po
po/bs/: kmahjongg.po
po/ca/: kmahjongg.po
po/ca/docs/kmahjongg/: index.docbook
po/ca@valencia/: kmahjongg.po
po/cs/: kmahjongg.po
po/cs/docs/kmahjongg/: index.docbook
po/csb/: kmahjongg.po
po/cy/: kmahjongg.po
po/da/: kmahjongg.po
po/de/: kmahjongg.po
po/de/docs/kmahjongg/: index.docbook
po/el/: kmahjongg.po
po/en_GB/: kmahjongg.po
po/eo/: kmahjongg.po
po/es/: kmahjongg.po
po/es/docs/kmahjongg/: index.docbook
po/et/: kmahjongg.po
po/et/docs/kmahjongg/: index.docbook
po/eu/: kmahjongg.po
po/fa/: kmahjongg.po
po/fi/: kmahjongg.po
po/fr/: kmahjongg.po
po/fr/docs/kmahjongg/: index.docbook
po/ga/: kmahjongg.po
po/gl/: kmahjongg.po
po/he/: kmahjongg.po
po/hi/: kmahjongg.po
po/hne/: kmahjongg.po
po/hr/: kmahjongg.po
po/hu/: kmahjongg.po
po/ia/: kmahjongg.po
po/id/: kmahjongg.po
po/is/: kmahjongg.po
po/it/: kmahjongg.po
po/it/docs/kmahjongg/: index.docbook
po/ja/: kmahjongg.po
po/ka/: kmahjongg.po
po/kk/: kmahjongg.po
po/km/: kmahjongg.po
po/ko/: kmahjongg.po
po/lt/: kmahjongg.po
po/lt/docs/kmahjongg/: index.docbook
po/lv/: kmahjongg.po
po/mai/: kmahjongg.po
po/mk/: kmahjongg.po
po/ml/: kmahjongg.po
po/mr/: kmahjongg.po
po/nb/: kmahjongg.po
po/nds/: kmahjongg.po
po/ne/: kmahjongg.po
po/nl/: kmahjongg.po
po/nl/docs/kmahjongg/: index.docbook
po/nn/: kmahjongg.po
po/oc/: kmahjongg.po
po/pa/: kmahjongg.po
po/pl/: kmahjongg.po
po/pl/docs/kmahjongg/: index.docbook
po/pt/: kmahjongg.po
po/pt/docs/kmahjongg/: index.docbook
po/pt_BR/: kmahjongg.po
po/pt_BR/docs/kmahjongg/: index.docbook
po/ro/: kmahjongg.po
po/ru/: kmahjongg.po
po/ru/docs/kmahjongg/: index.docbook
po/sa/: kmahjongg.po
po/se/: kmahjongg.po
po/sk/: kmahjongg.po
po/sl/: kmahjongg.po
po/sl/docs/kmahjongg/: index.docbook
po/sq/: kmahjongg.po
po/sr/: kmahjongg.po
po/sr@ijekavian/: kmahjongg.po
po/sr@ijekavianlatin/: kmahjongg.po
po/sr@latin/: kmahjongg.po
po/sv/: kmahjongg.po
po/sv/docs/kmahjongg/: index.docbook
po/ta/: kmahjongg.po
po/tg/: kmahjongg.po
po/th/: kmahjongg.po
po/tr/: kmahjongg.po
po/ug/: kmahjongg.po
po/uk/: kmahjongg.po
po/uk/docs/kmahjongg/: index.docbook
po/wa/: kmahjongg.po
po/xh/: kmahjongg.po
po/zh_CN/: kmahjongg.po
po/zh_TW/: kmahjongg.po
src/: BoardLayout.h  CMakeLists.txt  DemoAnimation.cpp  DemoAnimation.h  Editor.cpp  Editor.h  FrameImage.h  GameData.cpp  GameData.h  GameItem.cpp  GameItem.h  GameScene.cpp  SelectionAnimation.cpp  boardlayout.cpp  boardlayout.h  demoanimation.cpp  demoanimation.h  editor.cpp  editor.h  frameimage.cpp  frameimage.h  gamebackground.cpp  gamebackground.h  gamedata.cpp  gamedata.h  gameitem.cpp  gameitem.h  gameremovedtiles.cpp  gameremovedtiles.h  gamescene.cpp  gamescene.h  gametype.ui  gameview.cpp  gameview.h  kmahjongg.cpp  kmahjongg.h  kmahjongg.kcfg  kmahjongg.qrc  kmahjongg_debug.cpp  kmahjongg_debug.h  (+13 more)
