toolbar_DATA = newnum.xpm pause.xpm play.xpm
toolbardir = $(kde_datadir)/kmahjongg/toolbar

pics_DATA = kmahjongg.png kmahjongg_bgnd.png 
picsdir = $(kde_datadir)/kmahjongg/pics

layout_DATA = default.layout cross.layout pirates.layout \
	pyramid.layout stax.layout test.layout test2.layout \
	tower.layout triangle.layout
layoutdir = $(kde_datadir)/kmahjongg/pics

bgnd_DATA = default.bgnd haze.bgnd pirates.bgnd slate.bgnd \
	wood.bgnd
bgnddir = $(kde_datadir)/kmahjongg/pics

tileset_DATA = default.tileset pirates.tileset
tilesetdir = $(kde_datadir)/kmahjongg/pics

EXTRA_DIST = $(toolbar_DATA) $(pics_DATA) $(layout_DATA) $(bgnd_DATA) $(tileset_DATA)
